@@ -2,8 +2,7 @@
 ;;;;
 ;;;; Documentation for STRUMMER class.
 ;;;;
-;;;; STRUMMER is a type of part which produces strummed chords.  It has a
-;;;; similar structure to SIMPLE-PART but provides much more flexibility.
+;;;; STRUMMER is a type of part which produces strummed chords.
 ;;;;
 ;;;; Mechanics:
 ;;;;
