@@ -18,3 +18,6 @@ Version 3.0.1
 Version 3.0.2 (2022.05.11)
     1. 2022-05-13 Redefined ? inspection function to be interactive.
     2. 2022-05-13 Fixed MODX-DRUMS bug.
+    3. 2022-05-18 Defines new kits for MODX-DRUMS.	
+    4. 2022-05-18 Removes dead code for depreciated "simple-part"
+    
